--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/frenchfriefavicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jeorshey Ang - UCR CNAS</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jeorshey Ang</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jeorsheymang.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,25 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jeorshey Ang
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Microbiology Major📚</div>
+        <p class="lead mb-4">I am currently a second-year Microbiology major at University of California, Riverside. Previously attending STEM (science, technology, engineering, and medicine/mathematics)-based schools in Los Angeles, CA I became interested and wanted to invest my time into exploring the medical field. Especially with the help of my family members who are currently in the medical field, I've been able to study the sciences in college. Due to my interest in the medical field, over the past years I've spent my time at the Kaiser Permanente hospital in Los Angeles where I was taught medical skills by a medical professional. There I learned about many diseases, got an idea of moral and ethical medical debates doctors and nurses face, and skills such as suturing, performing physical examinations, and CPR. I also joined medical and humanitarian clubs in school like Girls Build LA, HOSA which stands for Health Occupations Students of America, and STEM 4 Humanity. Within these clubs I was able to reach out to the community, bringing awareness towards illnesses that may seem miniscule and aren't taken seriously through information booths, presentations, games, and giving out supplies in hopes of helping them. Many communities don't have the resources needed or have access to medical supplies because they're too expensive or because they simply do not know sbout them. So, I also learned and studied about the health occupations and skills needed. With all the knowledge and skills I gained, I was able to take part in health fairs organized by students and ultimately make a difference. <br><br>
 
-        Enter bio here<br><br>
+        After my first year of college, I became a Certified Nursing Assistant. Becoming a CNA, in my opinion, is the first step towards the medical field because through this schooling I learned about basic patient care. I found that being hospitable, patient, and empathetic is very important to patients and helps them in receiving the care they need. I had hands-on experience at the Panorama Gardens Nursing and Rehabilitation Center. Shadowing a medical professional one day and having to perform skills the next day tested our skills which was very eye-opening because it's not as easy as it looks. The patient interaction is unpredictable because of their illnesses, but truthfully those illnesses do not define who they are. One thing we nurses encouraged, was self-care. If they resident thought they could perform a task without help, then they were given the opportunity to and were encouraged to do so. Prior to having real-patient interaction, I had to learn the skills in the schools laboratory using a mannequin. At the end of this course, I was given a written and skill-performance exam and passed. Even though my interests coinside with nursing, I thought that studying and earning a degree in microbiology would help me understand medical conditions more and maybe push me towards research. Obtaining a college degree in the sciences and achieving certifications in other medical professions such as LVN or RN, I hope will further my medical skills and knowledge and become an amazing health care professional. <br><br>
 
-        Enter bio here
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/jeorsheyang/jang">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/jeorshey">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="jang003@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +91,50 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Katipunan Pilipino Student Organization</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://highlanderlink.ucr.edu/organization/katipunan">Organization</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Monthly Kati Kleans @ Watkins Dr<br> 
+              • Fundraisers<br>
+              • Katipunan Experience Host<br>
+              • Pilipino Culture Night<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">October 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Family-Owned Clothing Business</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Customer service<br>
+              • Stocks<br>
+              • Finances<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2017 - January 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteering</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">California</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Heal The Bay<br>
+            • AIDS Walk Los Angeles, CA<br>
+            • Kaiser Permanente Hospital Mentorship Program<br>
+            • Climate Change March Los Angeles, CA<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2013 - June 2018</span>
           </div>
         </div>
 
@@ -152,33 +153,22 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">College of Natural & Agricultural Sciences</div>
+            <div>B.S in Microbiology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2018 - June 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">St. Jude's School of Nursing</h3>
+            <div class="subheading mb-3">Nursing</div>
+            <div>Certified Nursing Assistant</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2019 - September 2019</span>
           </div>
         </div>
 
@@ -191,7 +181,17 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Portfolio1.jpg" width="500px">
+        </center>
+        <center>
+          <img src="img/Portfolio2.jpg" width="500px">
+        </center>
+        <br>
+        <center>
+            <img src="img/Portfolio3.jpg" width="500px">
+        </center>
+        <center>
+          <img src="img/Portfolio4.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +199,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jeorshey Ang</center><br>
 
 
   </div>
